--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "block-site",
-  "version": "8.2.1",
-  "description": "Blocks access to distracting websites to improve your productivity.",
-  "author": "Pavel Bucka",
+  "name": "断燥",
+  "version": "1.0.1",
+  "description": "",
+  "author": "15973081",
   "license": "MIT",
-  "repository": "github:penge/block-site",
+  "repository": "github:15973081/DistraCut-CN",
   "private": true,
   "scripts": {
     "lint": "eslint src --ext .ts",
-    "test": "TZ=UTC jest",
+    "test": "$env:TZ='UTC'; jest",
     "__rmrf-dist": "rimraf dist",
     "__no-emit": "tsc --noEmit",
-    "__build-chrome": "TARGET=chrome tsup",
-    "__build-firefox": "TARGET=firefox tsup",
+    "__build-chrome": "$env:TARGET='chrome'; tsup",
+    "__build-firefox": "$env:TARGET='firefox'; tsup",
     "build": "npm-run-all __rmrf-dist __no-emit __build-chrome __build-firefox"
   },
   "devDependencies": {
