--- a/package.json
+++ b/package.json
@@ -1,36 +1,45 @@
 {
-  "name": "断燥",
+  "name": "distracut-cn",
   "version": "1.0.1",
   "description": "",
   "author": "15973081",
   "license": "MIT",
   "repository": "github:15973081/DistraCut-CN",
   "private": true,
+
   "scripts": {
     "lint": "eslint src --ext .ts",
-    "test": "$env:TZ='UTC'; jest",
-    "__rmrf-dist": "rimraf dist",
-    "__no-emit": "tsc --noEmit",
-    "__build-chrome": "$env:TARGET='chrome'; tsup",
-    "__build-firefox": "$env:TARGET='firefox'; tsup",
-    "build": "npm-run-all __rmrf-dist __no-emit __build-chrome __build-firefox"
+    "test": "cross-env TZ=UTC jest",
+
+    "clean": "rimraf dist",
+    "typecheck": "tsc --noEmit",
+
+    "build:chrome": "cross-env TARGET=chrome tsup",
+    "build:firefox": "cross-env TARGET=firefox tsup",
+
+    "build": "npm-run-all clean typecheck build:chrome build:firefox"
   },
+
   "devDependencies": {
     "@stylistic/eslint-plugin-ts": "^1.7.2",
     "@types/chrome": "^0.0.266",
-    "@types/eslint": "^8.56.10",
     "@types/firefox-webext-browser": "^120.0.3",
+    "@types/eslint": "^8.56.10",
     "@types/jest": "^29.5.11",
     "@types/node": "^20.12.7",
     "@typescript-eslint/eslint-plugin": "^7.7.1",
     "@typescript-eslint/parser": "^7.7.1",
+
+    "cross-env": "^10.1.0",
     "eslint": "^8.57.0",
     "jest": "^29.7.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^5.0.5",
     "ts-jest": "^29.1.2",
-    "tsup": "^8.0.2"
+    "tsup": "^8.0.2",
+    "typescript": "^5.4.0"
   },
+
   "dependencies": {
     "dayjs": "^1.11.10"
   }
